crates/elif-http-derive/tests/ui/fail/routes_empty_type_path.stderr
error: expected type, found `{`
 --> tests/ui/fail/routes_empty_type_path.rs:7:9
  |
7 | impl <> {
  |         ^ expected type
